--- a/OlimpikonokWEBApp/Views/Home/TorolSportolo.cshtml
+++ b/OlimpikonokWEBApp/Views/Home/TorolSportolo.cshtml
@@ -3,11 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Sportolók</h1>
-	<div style="padding: 10px">
-		<a asp-area="" asp-controller="Home" asp-action="UjSportolo" class="btn btn-primary">Új sportoló felvétele</a>
-	</div>
-    <table class="table table-striped">
+	<table class="table table-striped">
 		<thead>
 			<tr>
 				<th>Név</th>
@@ -31,11 +27,10 @@
 					<td>@sportolo.Sportag</td>
 					<td>@sportolo.Ermek</td>
 					<td><a asp-area="" asp-controller="Home" asp-action="SportoloKep" asp-route-id="@sportolo.Id"><img src="@Program.ImageConverter(@sportolo.IndexKep)" style="height: 50px;" /></a></td>
-					<td><a asp-area="" asp-controller="Home" asp-action="ModositSportolo"><img src="/images/pen.svg" /></a></td>
-					<td><a asp-area="" asp-controller="Home" asp-action="TorolSportolo"><img src="/images/trash.svg" /></a></td>
+					<td><img src="/images/pen.svg" /></td>
 					<td><img src="/images/trash.svg" /></td>
 				</tr>
 			}
 		</tbody>
-    </table>
+	</table>
 </div>                                                
